--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.EduResource"
         tools:targetApi="31">
         <activity
+            android:name=".Sem2"
+            android:exported="false" />
+        <activity
+            android:name=".Sem5"
+            android:exported="false" />
+        <activity
+            android:name=".Sem3"
+            android:exported="false" />
+        <activity
             android:name=".Sem4"
             android:exported="false" />
         <activity
