--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.EduResource"
         tools:targetApi="31">
         <activity
+            android:name=".placementsubject"
+            android:exported="false" />
+        <activity
+            android:name=".secondpage"
+            android:exported="false" />
+        <activity
+            android:name=".Sem7"
+            android:exported="false" />
+        <activity
+            android:name=".Sem6"
+            android:exported="false" />
+        <activity
+            android:name=".Sem1"
+            android:exported="false" />
+        <activity
             android:name=".Sem2"
             android:exported="false" />
         <activity
@@ -26,9 +41,6 @@
             android:exported="false" />
         <activity
             android:name=".SemList"
-            android:exported="false" />
-        <activity
-            android:name=".semester_list"
             android:exported="false" />
         <activity
             android:name=".first_page"
